# siege_utilities

./: .buildinfo  .coderabbit.yaml  .flake8  .gitguardian.yaml  .gitignore  .readthedocs.yaml.py  ANALYSIS_REPORT.md  CHANGELOG.md  CHANGE_CLASSIFICATION_AND_RELEASE_POLICY.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  CONTRIBUTOR_GOVERNANCE.md  FUNCTION_ANALYSIS.md  FUNCTION_STATUS_TRACKING.md  GITHUB_ISSUES.md  IMPROVEMENTS.md  INTERNAL_DOCUMENTATION.md  LICENSE  LINT_RATCHET_PLAN.md  MANIFEST.in  POLICIES.md  PR_REVIEW_RUBRIC.md  README.md  README_OVERNIGHT_TESTING 2.md  RECOVERY_SUMMARY.md  RELEASE_NOTES_v1.0.1 2.md  REPOSITORY_HYGIENE.md  RESTORATION_PLAN.md  SESSION_3_PROGRESS.md  SESSION_4_PROGRESS.md  SESSION_STATUS.md  TESTING_AND_CLEANUP_PLAN 2.md  TESTING_PLAN_TOMORROW.md  TESTING_README.md  VARIABLE_NAMING_GUIDE 2.md  VARIABLE_NAMING_GUIDE.md  __init__.py  all_functions.html  analytics.html  (+71 more)
.claude/: settings.local.json
.github/: pull_request_template.md
LICENSES/: Siege-Commercial.txt  wkls.md
_modules/: dataclasses.html  index.html
_static/: documentation_options.js
api/: distributed.html  files.html  geo.html
core/: __init__.py  string_utils.py
dataspell_venv/: pyvenv.cfg
distributed/: __init__.py  hdfs_legacy.py  spark_utils.py
docs/: ARCHITECTURE.md  CENSUS_DATASET_RELATIONSHIPS.md  CENSUS_DATA_GUIDE.md  CHANGE_CLASSIFICATION_AND_RELEASE_POLICY.md  CLIENT_AND_CONNECTION_CONFIG.md  CODERABBIT_WORKFLOW.md  CODING_STYLE.md  CONTRIBUTOR_GOVERNANCE.md  DEVELOPER_GUIDE.md  EXAMPLES.md  FAILURE_MODES.md  GEOGRAPHIC_REFERENCE_DATA.md  HYDRA_PYDANTIC_CONFIGURATION.md  INTENT.md  ISOCHRONES_AND_WKLS.md  LICENSE_MODEL.md  LINT_RATCHET_PLAN.md  MANAGED_ENVIRONMENTS.md  MULTI_SOURCE_TABULATION_GUIDE.md  Makefile  NOTEBOOKS.md  PR_REVIEW_RUBRIC.md  QUICK_START_GUIDE.md  RELEASE_LINEAGE.md  RELEASE_MANAGEMENT.md  RELEASE_PLAN_v2.md  REPOSITORY_HYGIENE.md  SURVEY_MODULE.md  TESTING_GUIDE.md  TEST_UPGRADES.md  USER_GUIDE 2.md  USER_GUIDE.md  conf.py  databricks-quickstart.md  requirements.txt
examples/: README_Streamlit_Demo.md  bivariate_choropleth_pipeline_test.ipynb  census_intelligence_demo.py  census_intelligence_streamlit_demo.py  client_and_connection_demo.py  function_discovery_guide.ipynb  hydra_pydantic_example.py  requirements_streamlit_demo.txt  siege_utilities_demo.ipynb  step_by_step_choropleth.ipynb
files/: __init__.py  operations.py  paths.py  remote.py  shell.py
geo/: __init__.py  geocoding.py
lint_baselines/: phase4_flake8_fingerprints.txt
notebooks/: 01_Configuration_System_Demo.ipynb  02_Create_User_Client_Profiles.ipynb  03_Person_Actor_Architecture.ipynb  04_Spatial_Data_Census_Boundaries.ipynb  05_Choropleth_Maps.ipynb  06_Report_Generation.ipynb  07_Geocoding_Address_Processing.ipynb  08_Sample_Data_Generation.ipynb  09_Analytics_Connectors.ipynb  10_Profile_Branding_Testing.ipynb  11_ReportLab_PDF_Features.ipynb  12_PowerPoint_Generation.ipynb  13_GeoDjango_Integration.ipynb  14_GA_Analytics_Report.ipynb  15_Census_Demographics_Integration.ipynb  16_Spark_Distributed_Operations.ipynb  17_Developer_Tooling.ipynb  18_Google_Workspace.ipynb  19_NLRB_Data_Integration.ipynb  20_Multi_Source_Spatial_Tabulation.ipynb  20_New_Features_v3_10_v3_11.ipynb  21_Enterprise_Onboarding_Presentation.ipynb  22_Temporal_Political_Models.ipynb  23_Redistricting_Analysis.ipynb  24_DuckDB_Engine_Abstraction.ipynb  25_SpatiaLite_Cache_Geocoding.ipynb  26_International_Boundaries_GADM.ipynb  27_Advanced_Census_MOE_NAICS.ipynb  28_Polling_Survey_Analysis.ipynb  README.md
overnight_results/: Advanced-Census-Workflows_test.py  Business-Intelligence-Site-Selection_test.py  Census-Data-Intelligence-Guide_test.py  Demographic-Analysis-Pipeline_test.py  Real-Estate-Market-Intelligence_test.py  census_bivariate_choropleth_recipe_test.py  comprehensive_morning_report.md  function_discovery_guide_test.py  morning_report.md  notebook_conversion_results.json  overnight_test_results.json  recipe_test_results.json  step_by_step_choropleth_test.py
purgatory/: README.md
scripts/: README.md  auto_docs.sh  automate_docs_and_deploy.py  automation_config.yaml  battle_test_hydra_pydantic.py  check_imports.py  check_lazy_imports.py  check_lint_ratchet.py  check_lint_ratchet_phase1.py  check_no_stub_docstrings.py  check_test_file_hygiene.py  check_unbounded_io.py  convert_notebooks_to_scripts.py  create_notebook.py  generate_docstrings.py  google_workspace_auth.py  link_commits_to_issues.py  migrate_to_hydra.py  morning_recommendations_generator.py  overnight_comprehensive_testing.py  overnight_testing_suite.py  release.sh  release_manager.py  run_overnight_complete.sh  run_overnight_comprehensive.sh  run_tests.py  setup_test_db.sh  sync_to_wiki.py  update_wiki.py  update_wiki.sh  verify_bivariate_choropleth.py
siege_utilities/: __init__.py  cache.py  exceptions.py  runtime.py
siege_utilities.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sources/: README.md
tests/: conftest.py  django_settings.py  manual_google_auth.py  test_admin_profile_manager.py  test_api_contract_tools.py  test_architecture.py  test_areal_interpolation.py  test_argument_pattern.py  test_backward_compat.py  test_boundary_catalog.py  test_boundary_diagnostics.py  test_boundary_manager.py  test_boundary_providers.py  test_boundary_smoke_matrix.py  test_branding_config_model.py  test_cache_eviction.py  test_cache_sample_dataset.py  test_census_api_client.py  test_census_api_integration.py  test_census_bug_fix.py  test_census_cache_backend.py  test_census_cache_django_roundtrip.py  test_census_data_selector_bonus.py  test_census_dataset_mapper.py  test_census_files.py  test_census_gazetteer.py  test_census_geocoder.py  test_census_geocoder_errors.py  test_census_utilities.py  test_chart_generator.py  test_chart_types.py  test_chart_types_errors.py  test_choropleth.py  test_client_and_connection_config.py  test_client_branding_errors.py  test_client_branding_expanded.py  test_client_branding_slugify.py  test_client_survey_registry.py  test_clients_validation.py  (+158 more)
(+643 files in other folders)
