[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siege-utilities"
version = "3.12.0"
description = "A comprehensive Python utilities package with enhanced auto-discovery"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Dheeraj Chand", email = "dheeraj@siegeanalytics.com"}
]
license = {text = "AGPL-3.0-only OR commercial license"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]

# Core dependencies only — lightweight, no heavy packages
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "tqdm>=4.60.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Data manipulation (pandas, numpy, openpyxl, pyarrow, faker)
data = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "faker>=35.2.2",
]
# Geospatial (geopandas, shapely, pyproj, etc.)
geo = [
    "geopandas>=0.13.2",
    "shapely>=2.0.0,<3.0",
    "pyproj>=3.3.0",
    "fiona>=1.9.0",
    "geopy>=2.4.1",
    "rtree>=1.0.0",
    "mapclassify>=2.5.0",
    "tobler>=0.11.0",
    "osmnx>=1.9.4",
    "pysal>=24.1",
    "censusgeocode>=0.5.2",
]
# H3 hexagonal spatial index (lightweight spatial joins)
h3 = [
    "h3>=4.0.0",
]
# Reporting and visualization
reporting = [
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
    "folium>=0.18.0",
    "branca>=0.5.0",
    "plotly>=6.3.0",
    "reportlab>=4.4.3",
    "pypdf2>=3.0.1",
    "pillow>=10.0.0",
    "fonttools>=4.40.0",
]
# Analytics connectors (GA, Facebook, Snowflake, data.world)
analytics = [
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.181.0",
    "google-analytics-data>=0.18.19",
    "google-analytics-admin>=0.25.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "facebook-business>=20.0.0",
    "datadotworld>=1.7.0",
    "snowflake-connector-python>=3.0.0",
]
# Distributed computing (Spark, Sedona)
distributed = [
    "pyspark>=3.3.0",
    "apache-sedona>=1.5.0",
]
# GeoDjango (Django ORM + PostGIS)
geodjango = [
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-gis>=1.0.0",
    "psycopg2-binary>=2.9.0",
]
# Hydra configuration framework
config-extras = [
    "hydra-core>=1.3.0",
    "hydra-zen>=0.12.0",
    "omegaconf>=2.3.0",
]
# Web scraping / parsing
web = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]
# Interactive / Streamlit applications
streamlit = [
    "streamlit>=1.28.0",
    "altair>=5.0.0",
    "bokeh>=3.0.0",
    "pydeck>=0.8.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.3.3",
]
# Data export and performance profiling
export = [
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
]
# 3D map rendering (pydeck / deck.gl)
3d = [
    "pydeck>=0.8.0",
]
# DuckDB performance backend
performance = [
    "duckdb>=0.7.0",
]
# Database connectivity
database = [
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=1.4.0",
]
credentials = [
    # 1Password CLI integration (requires 1Password CLI to be installed separately)
    # macOS Keychain integration (built-in on macOS)
]
# Databricks SDK integration
databricks = [
    "databricks-sdk>=0.20.0",
]
# Development and testing
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest-html>=3.1.0",
    "pytest-json-report>=1.5.0",
    "pytest-forked>=1.4.0",
    "pytest-django>=4.5.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "astor>=0.8.1",
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-gis>=1.0.0",
    "psycopg2-binary>=2.9.0",
]
# Everything — convenience meta-extra for full installs
all = [
    # data
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "faker>=35.2.2",
    # geo
    "geopandas>=0.13.2",
    "shapely>=2.0.0,<3.0",
    "pyproj>=3.3.0",
    "fiona>=1.9.0",
    "geopy>=2.4.1",
    "rtree>=1.0.0",
    "mapclassify>=2.5.0",
    "tobler>=0.11.0",
    "osmnx>=1.9.4",
    "pysal>=24.1",
    "censusgeocode>=0.5.2",
    # h3
    "h3>=4.0.0",
    # databricks
    "databricks-sdk>=0.20.0",
    # reporting
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
    "folium>=0.18.0",
    "branca>=0.5.0",
    "plotly>=6.3.0",
    "reportlab>=4.4.3",
    "pypdf2>=3.0.1",
    "pillow>=10.0.0",
    "fonttools>=4.40.0",
    # analytics
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.181.0",
    "google-analytics-data>=0.18.19",
    "google-analytics-admin>=0.25.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "facebook-business>=20.0.0",
    "datadotworld>=1.7.0",
    "snowflake-connector-python>=3.0.0",
    # distributed
    "pyspark>=3.3.0",
    "apache-sedona>=1.5.0",
    # geodjango
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-gis>=1.0.0",
    "psycopg2-binary>=2.9.0",
    # config-extras
    "hydra-core>=1.3.0",
    "hydra-zen>=0.12.0",
    "omegaconf>=2.3.0",
    # web
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # export
    "xlsxwriter>=3.1.0",
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
    # performance
    "duckdb>=0.7.0",
    # database
    "sqlalchemy>=1.4.0",
    # 3d
    "pydeck>=0.8.0",
    # streamlit (subset)
    "notebook>=7.3.3",
]

[project.urls]
Homepage = "https://github.com/siege-analytics/siege_utilities"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.pytest.ini_options]
markers = [
    "core: tests for core modules (logging, strings, files, config)",
    "geo: tests requiring geopandas/shapely",
    "requires_gdal: tests requiring GDAL libraries",
    "requires_spark: tests requiring PySpark",
    "integration: tests requiring network/API access",
    "smoke: quick validation tests for critical paths (no network, no GDAL)",
    "slow: tests that take >10s (network, large data)",
    "databricks: tests requiring Databricks runtime or SDK",
]

[tool.coverage.report]
fail_under = 20
